fix footer on small pages detached from the base

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,10 +15,10 @@
   box-sizing: border-box;
 }
 
-
 html, body {
   background-color: #fff;
   color: #000;
+  min-height: 100vh; /*Ensure footer isn't detached from the bottom of screen of small pages. Set minimum height to 100% of the viewport height.*/
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   font-size: 15px;
@@ -28,9 +28,16 @@ html, body {
   /* overflow-x: hidden; */
 }
 
-.content-body {
-  flex: 1 1 auto;
-  /*grow vertically*/
+body { /*Using flexbox to ensure the footer is always attached to the bottom of page, and the main content <main></main> is centered on the page.*/
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content-body { /* The <main> content of every page.*/
+  flex: 1 1 auto; /*grow vertically*/
+  width: 100vw;
 }
 
 .go_back {
